# M.I.A

./: .gitignore  CMakeLists.txt  dub.json  gyllir.toml  syntax
books/: alicio.txt
resources/eo/: common-conj.txt  common-noun.txt  conjunction.txt  cumul-suffixes.txt  e-words.txt  e_vortoj.txt  i_vortoj.txt  i_words.txt  interjection.txt  ki-words.txt  ne-adverboj.txt  prefixes.txt  pronouns.txt  root-ant-at.txt  special-adverbs.txt  suffixes.txt  test.txt  verb-ntr.txt  verb-tr.txt  verboj-tr.txt  word-list.txt
source/: app.d  grammar.d  main.yr  syntax.d  tree.d
source/command/: input.d  terminal.d
source/syntax/: _.d  grammar.d  syntax.d  tree.d
src/: main.yr  parser.yr
src/mia/syntax/: _.yr  lexer.yr  tokenizer.yr  visitor.yr  word.yr
src/mia/syntax/tree/: _.yr  group.yr  sentence.yr
src/mia/utils/: colors.yr
src/word/: _.yr  adjv.yr  advb.yr  base.yr  cjtn.yr  dtmnt.yr  noun.yr  verb.yr
