CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(MIA)
SET(CMAKE_C_COMPILER "gyc")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")

FILE (
  GLOB_RECURSE
  SRC
  source/*.yr
  )

set( CMAKE_VERBOSE_MAKEFILE on )

SET_SOURCE_FILES_PROPERTIES(${SRC} PROPERTIES LANGUAGE C)
add_executable(MIA ${SRC})
include_directories(${CMAKE_SOURCE_DIR}/)
